<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="fill_parent"
android:layout_height="fill_parent" >

<LinearLayout
android:orientation="horizontal"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:layout_weight="1"
android:gravity="center_vertical" >

    <Button android:id="@+id/audio_record_button"
	android:text="@string/start_record"
	android:layout_weight="1"
	android:layout_height="wrap_content"
	android:layout_width="1dip"/>
	
	<Button android:id="@+id/audio_listen_button"
	android:text="@string/start_listen"
	android:layout_weight="1"
	android:layout_height="wrap_content"
	android:layout_width="1dip"/>

</LinearLayout>

<LinearLayout
android:orientation="horizontal"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:layout_marginTop="20dip"
android:layout_marginBottom="20dip" >

    <Button android:id="@+id/audio_save_button"
	android:text="@string/save"
	android:layout_weight="1"
	android:layout_height="wrap_content"
	android:layout_width="1dip"/>
	
	<Button android:id="@+id/audio_cancel_button"
	android:text="@string/cancel"
	android:layout_weight="1"
	android:layout_height="wrap_content"
	android:layout_width="1dip"/>
</LinearLayout>

</LinearLayout>