<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent">
	<LinearLayout android:layout_width="match_parent"
		android:layout_height="match_parent" android:orientation="vertical"
		android:padding="5px">
		<RelativeLayout android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<ImageView android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true" android:src="@drawable/icon_large" />
		</RelativeLayout>

		<TextView android:paddingTop="10px" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/username" />
		<EditText android:layout_width="match_parent"
			android:layout_height="wrap_content" android:id="@+id/username" 
			android:inputType="text" />
		<TextView android:paddingTop="10px" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/password" />
		<EditText android:layout_width="match_parent"
			android:layout_height="wrap_content" android:id="@+id/password"
			android:inputType="textPassword" />
		<View android:layout_width="match_parent" android:layout_height="10px" />
		<Button android:layout_width="match_parent"
			android:layout_height="wrap_content" android:text="@string/login"
			android:enabled="false" android:onClick="onClickLogin"
			android:id="@+id/login" />
		<View android:layout_width="match_parent" android:layout_height="10px" />
		<Button android:layout_width="match_parent"
			android:layout_height="wrap_content" android:text="@string/register"
			android:onClick="onClickRegister" />
	</LinearLayout>
</ScrollView>